--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@
   padding-bottom: 100px;
 }
 
+.homepage-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 80px;
+  padding-top: 0px;
+  align-items: center;
+}
+
 footer {
   position: fixed;
   font-family: Georgia, serif;
