--- a/src/Pages/Details.css
+++ b/src/Pages/Details.css
@@ -6,10 +6,11 @@
   max-width: 768px;
   margin: auto;
   padding-bottom: 80px;
-  padding-top: 0px;
+  padding-top: 20px;
 }
 
 .detail-txt {
-  margin: 0 20px;
+  margin: 5px 0 ;
   text-align: center;
+  overflow-y: auto;
 }
